# oslec-min

./: .gitignore  README.txt
src/: Makefile  Makefile.in  configure.ac  echo.c  echotest.c  fifotest.c  test  test.c
